force-app/main/default/objects/Book__c/Book__c.object-meta.xml
<CustomObject>
    <description>書誌マスタ。ISBN があれば家族で再利用する。</description>
    <label>本</label>
    <nameField>
        <displayFormat>BOOK-{0000}</displayFormat>
        <label>本番号</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>本</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>