force-app/main/default/objects/Book__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>カテゴリ</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>小説</fullName>
            </value>
            <value>
                <fullName>ビジネス</fullName>
            </value>
            <value>
                <fullName>技術書</fullName>
            </value>
            <value>
                <fullName>趣味</fullName>
            </value>
            <value>
                <fullName>漫画</fullName>
            </value>
            <value>
                <fullName>その他</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>