force-app/main/default/objects/Book__c/fields/CoverUrl__c.field-meta.xml
<CustomField>
    <fullName>CoverUrl__c</fullName>
    <label>表紙URL</label>
    <type>Url</type>
</CustomField>