force-app/main/default/objects/Book__c/fields/PublishedYear__c.field-meta.xml
<CustomField>
    <fullName>PublishedYear__c</fullName>
    <label>出版年</label>
    <length>20</length>
    <type>Text</type>
</CustomField>