force-app/main/default/objects/Book__c/fields/Title__c.field-meta.xml
<CustomField>
    <fullName>Title__c</fullName>
    <description>書名。必須。</description>
    <label>タイトル</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>