force-app/main/default/objects/Book__c/listViews/All_Books.listView-meta.xml
<ListView>
    <fullName>All_Books</fullName>
    <columns>NAME</columns>
    <columns>Title__c</columns>
    <columns>ISBN__c</columns>
    <columns>Author__c</columns>
    <columns>Category__c</columns>
    <filterScope>Everything</filterScope>
    <label>すべての本</label>
</ListView>